--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -36,11 +36,9 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pytest main.py  --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
-    - name: Upload pytest test results
+        python main.py
+    - name: Archive code coverage results
       uses: actions/upload-artifact@v4
       with:
-          name: pytest-results-${{ matrix.python-version }}
-          path: junit/test-results-${{ matrix.python-version }}.xml
-        # Use always() to always run this step to publish test results when there are test failures
-      if: ${{ always() }}
+          name: code-coverage-report
+          path: l/*
