--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -37,9 +37,9 @@ jobs:
     - name: Test with pytest
       run: |
         python main.py
-        curl https://master.dl.sourceforge.net/project/gengkapak/ROM/olives/NezukoOS/11/NezukoOS-1.4-olives-20210710-1313-UNOFFICIAL.zip?viasf=1 > l/NezukoOS-1.4-olives-20210710-1313-UNOFFICIAL.zip
+        curl https://downloads.blissroms.org/download_check/mi439/Bliss-v18.0-mi439-OFFICIAL-vanilla-20241123.zip > l/Bliss-v18.0-mi439-OFFICIAL-vanilla-20241123.zip
     - name: Archive code coverage results
       uses: actions/upload-artifact@v4
       with:
           name: code-coverage-report
-          path: l/*
+          path: l/*.zip
